# MiniMax-AI

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  PODCAST_DESIGN.md  QWEN.md  README.md  commit_message.txt  download_video.py  llms.md  minimax_T2A.py  minimax_chat_R1.py  minimax_chat_voice.py  minimax_cli.py  minimax_delete_voice.py  minimax_file_delete.py  minimax_file_list.py  minimax_file_list_optimized.py  minimax_file_retrieve.py  minimax_file_upload.py  minimax_get_voice.py  minimax_image_generation.py  minimax_music_generation.py  minimax_music_upload.py  minimax_podcast.py  minimax_t2a_async_query_v2.py  minimax_t2a_async_v2.py  minimax_text2voice.py  minimax_video_generation.py  minimax_voice_clone.py  podcast_cli.py  podcast_help.py  pyproject.toml  requirements.txt  setup.py  start.bat
ai_short_drama/: config.py  requirements.txt
api_docs/: delete_voice.md  error_codes.md  file_management.md  get_voice.md  image_generation.md  music_generation.md  video_generation.md  voice_design.md  websocket_text_to_speech.md
docs/: PODCAST_DESIGN.md  podcast-system-design.md
docs/api/: text_generation.md  text_to_speech.md  (+2 more)
examples/: music_lyrics.txt  music_lyrics_2.txt  music_lyrics_3.txt  music_prompt.txt  music_prompt_2.txt  music_prompt_3.txt  podcast_auto_voices.txt  podcast_custom_voices.txt  tts_story.txt
podcast_system/: __init__.py  audio_enhancer.py  audio_mixer.py  batch_generator.py  content_generator.py  music_creator.py  podcast_generator.py  progress_tracker.py  voice_synthesizer.py
templates/: podcast_system_prompt.txt
